new functionality added to dubrovnik

--- a/dubScripts/dubrovnik_connection_template.ipynb
+++ b/dubScripts/dubrovnik_connection_template.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "source": [
     "import os\r\n",
     "import sys\r\n",
@@ -37,23 +37,8 @@
     "# os.system('cls')  # clear terminal screen\r\n",
     "# print(sys.path)\r\n",
     "os.chdir(r'c:\\MyLibs\\Dubrovnik\\dubScripts')\r\n",
-    "print(os.getcwd())"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "c:\\MyLibs\\Dubrovnik\\dubScripts\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "source": [
+    "# print(os.getcwd())\r\n",
+    "\r\n",
     "comm = boardcom.BoardComm()   # create an instance of class BoardComm\r\n",
     "connectedPort = comm.find_and_connect(echo=1)"
    ],
@@ -71,16 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "source": [
-    "# du.block_erase(comm, block_size=64, start_addr=0, echo=1)\r\n",
-    "du.read(comm, opcode='b', staddr=0, nbyte=200, echo=1)"
+    "du.block_erase(comm, block_size=4, start_addr=0, echo=1)\r\n",
+    "du.read(comm, opcode='b', staddr=0, length=200, echo=1)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "06; d8 0; wait 0\n",
+      ">>>\n",
       " b 0 c8\n",
       "ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff \n",
       "ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff \n",
