--- a/dubScripts/sandbox.ipynb
+++ b/dubScripts/sandbox.ipynb
@@ -57,24 +57,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "source": [
-    "# print(data_array)\r\n",
-    "# print(bindata)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "b'Unplugged Performance\\'s \"Dark Helmet,\" driven by Randy Pobst, clocked 1:28.213!\\nUnplugged Performance announced that its race-modified Tesla Model S Plaid, which won the Exhibition class of the 2021 Pikes Peak International Hill Climb race (see video), just set another EV track record at the Laguna Seca race track.\\n\\nRandy Pobst managed to achieve a time of 1:28.213, during the TeslaCorsa 16 event on August 1, 2021.\\n\\nThat\\'s noticeably better than the previous unofficial best of 1:29.9 (Tesla\\'s internal testing), reported on May, 1:30.3 time from September 2020 and 1:36.55 in September 2019 (prototype).\\n\\nAccording to the FastestLaps\\' list of fastest official lap times (not yet updated as of the time of publishing), the Tesla Model S Plaid is one of the fastest production cars at the track:\\n\\nMcLaren Senna (P15) (Randy Pobst) - 1:27.62\\nTesla Model S Plaid race-modified (Randy Pobst) - 1:28.213\\nPorsche 911 GT2 RS (991) (Randy Pobst) - 1:28.30\\nTesla Model S Plaid (Tesla tests) - 1:29.9 / 1:30.3.\\nThe Plaid version is equipped with three electric motors (one motor in the front and two motors in the rear) for a total system output of 1,020 hp (about 760 kW).\\n\\nThe top of the line Lucid Air prototype noted a time of 1:31.3 in September 2020.\\n\\nThe Tesla Model S Plaid is a truly amazing electric car as it basically offers a supercar\\'s level of performance while maintaining the versatility of a normal car (five seats, spacious, long range, big trunk and additional front trunk).\\n\\nThe version used at the track is noticeably modified, but even the production car is very fast. Moreover, as the technology improves, with more energy-dense batteries and lower weight, electric cars will be better and better. The production Plaid is already noticeably lighter - by 163 lbs (74 kg) - than the previous top-of-the-line version.'\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "source": [
     "# text = bytearray(b'abcdefgh')\r\n",
@@ -87,9 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "source": [
-    "datafile = r'C:\\MyLibs\\Dubrovnik\\dubScripts\\Tesla.bin'\r\n",
+    "datafile = r'C:\\MyLibs\\Dubrovnik\\dubScripts\\a_bin_file.bin'\r\n",
     "\r\n",
     "with open(datafile, 'rb') as fh:\r\n",
     "    df = fh.read()\r\n",
@@ -196,21 +178,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "source": [
-    "addr = '900'\r\n",
-    "int(addr,16)"
+    "wt = '60123123 us = at25sf'\r\n"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "2304"
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'capitalize',\n",
+       " 'casefold',\n",
+       " 'center',\n",
+       " 'count',\n",
+       " 'encode',\n",
+       " 'endswith',\n",
+       " 'expandtabs',\n",
+       " 'find',\n",
+       " 'format',\n",
+       " 'format_map',\n",
+       " 'index',\n",
+       " 'isalnum',\n",
+       " 'isalpha',\n",
+       " 'isascii',\n",
+       " 'isdecimal',\n",
+       " 'isdigit',\n",
+       " 'isidentifier',\n",
+       " 'islower',\n",
+       " 'isnumeric',\n",
+       " 'isprintable',\n",
+       " 'isspace',\n",
+       " 'istitle',\n",
+       " 'isupper',\n",
+       " 'join',\n",
+       " 'ljust',\n",
+       " 'lower',\n",
+       " 'lstrip',\n",
+       " 'maketrans',\n",
+       " 'partition',\n",
+       " 'removeprefix',\n",
+       " 'removesuffix',\n",
+       " 'replace',\n",
+       " 'rfind',\n",
+       " 'rindex',\n",
+       " 'rjust',\n",
+       " 'rpartition',\n",
+       " 'rsplit',\n",
+       " 'rstrip',\n",
+       " 'split',\n",
+       " 'splitlines',\n",
+       " 'startswith',\n",
+       " 'strip',\n",
+       " 'swapcase',\n",
+       " 'title',\n",
+       " 'translate',\n",
+       " 'upper',\n",
+       " 'zfill']"
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 7
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "wt = 'Part#               = AT25SF641'\r\n",
+    "wt.split('=')[1].strip()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'AT25SF641'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "confstr = ['Part#               = AT25SF641', 'Voltage             = 2.995', 'Frequency           = 60.00', 'Mode                = SPI', 'Dummy Cycle Count   = 4', 'Host Drive Strength = 6', 'PMON configuration:', 'avg                = 1', 'vst (us)           = 8244', 'vbt (us)           = 1100', 'mode               = sbc', 'meas               = i', 'min meas time (us) = 9344']"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "source": [
+    "d_config = {}\r\n",
+    "type(confstr)\r\n",
+    "for item in confstr:\r\n",
+    "    print(item)\r\n",
+    "    conf = item.split('=')\r\n",
+    "    # print(conf)\r\n",
+    "    key = conf[0].strip()\r\n",
+    "    if 'PMON conf' in key:\r\n",
+    "        continue # skip \"PMON configuration\" subtitle\r\n",
+    "    val = conf[1].strip()\r\n",
+    "    print(f'key: {key}, value: {val}')\r\n",
+    "    d_config[key] = val\r\n",
+    "print(d_config)\r\n",
+    "\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part#               = AT25SF641\n",
+      "key: Part#, value: AT25SF641\n",
+      "Voltage             = 2.995\n",
+      "key: Voltage, value: 2.995\n",
+      "Frequency           = 60.00\n",
+      "key: Frequency, value: 60.00\n",
+      "Mode                = SPI\n",
+      "key: Mode, value: SPI\n",
+      "Dummy Cycle Count   = 4\n",
+      "key: Dummy Cycle Count, value: 4\n",
+      "Host Drive Strength = 6\n",
+      "key: Host Drive Strength, value: 6\n",
+      "PMON configuration:\n",
+      "caught PMON conf\n",
+      "avg                = 1\n",
+      "key: avg, value: 1\n",
+      "vst (us)           = 8244\n",
+      "key: vst (us), value: 8244\n",
+      "vbt (us)           = 1100\n",
+      "key: vbt (us), value: 1100\n",
+      "mode               = sbc\n",
+      "key: mode, value: sbc\n",
+      "meas               = i\n",
+      "key: meas, value: i\n",
+      "min meas time (us) = 9344\n",
+      "key: min meas time (us), value: 9344\n",
+      "{'Part#': 'AT25SF641', 'Voltage': '2.995', 'Frequency': '60.00', 'Mode': 'SPI', 'Dummy Cycle Count': '4', 'Host Drive Strength': '6', 'avg': '1', 'vst (us)': '8244', 'vbt (us)': '1100', 'mode': 'sbc', 'meas': 'i', 'min meas time (us)': '9344'}\n"
+     ]
     }
    ],
    "metadata": {}
