synchronized scripts with new/updated libraries

--- a/dubScripts/dubrovnik_connection_template.ipynb
+++ b/dubScripts/dubrovnik_connection_template.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "source": [
     "import os\r\n",
     "import sys\r\n",
@@ -50,6 +50,62 @@
       "['COM7']\n",
       "Connected to COM7...\n"
      ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "source": [
+    "# du.get_part_number(comm)\r\n",
+    "du.get_config(comm)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'Part#': 'AT25SF641',\n",
+       " 'Voltage': '3.153',\n",
+       " 'Frequency': '8.25',\n",
+       " 'Mode': 'SPI',\n",
+       " 'Dummy Cycle Count': '4',\n",
+       " 'Host Drive Strength': '6',\n",
+       " 'avg': '1',\n",
+       " 'vst (us)': '8244',\n",
+       " 'vbt (us)': '1100',\n",
+       " 'mode': 'sbc',\n",
+       " 'meas': 'i',\n",
+       " 'min meas time (us)': '9344'}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "source": [
+    "# du.get_part_number(comm)\r\n",
+    "cfg = du.get_config(comm)\r\n",
+    "cfg['Part#']\r\n",
+    "cfg['Voltage']\r\n",
+    "cfg['Frequency']"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'3.153'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
     }
    ],
    "metadata": {}
@@ -105,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "source": [
     "# ***********************************\r\n",
     "# ***** Disconnect, Delete Port *****\r\n",
@@ -118,9 +174,7 @@
      "name": "stdout",
      "text": [
       "\n",
-      "Disconnected...\n",
-      "COM port deleted\n",
-      "\n"
+      "Disconnected from COM7...\n"
      ]
     }
    ],
