--- a/dubScripts/sandbox.ipynb
+++ b/dubScripts/sandbox.ipynb
@@ -363,6 +363,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "source": [
+    "# params = {'start_address': [0x0000, 0x4000, 0x8000, 0xc000, 0x10000],\r\n",
+    "#                          'length': [0x4000,0x4000,0x4000,0x4000,0x4000],\r\n",
+    "#                          'pattern': ['aaaaaaaa','00000000','ffffffff','f0f0f0f0','ff00ff00']}\r\n",
+    "\r\n",
+    "# for key in params.values():\r\n",
+    "#     print(key)\r\n",
+    "#     for value in key:\r\n",
+    "#         print(value)\r\n",
+    "\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "params = [[0x0000, 0x4000, 'aaaaaaaa'],\r\n",
+    "          [0x4000, 0x4000, '00000000'],\r\n",
+    "          [0x8000, 0x4000, 'ffffffff'],\r\n",
+    "          [0xc000, 0x4000, 'f0f0f0f0'],\r\n",
+    "          [0x10000, 0x4000, 'ff00ff00']]\r\n",
+    "\r\n",
+    "for param in params:\r\n",
+    "    print(param)\r\n",
+    "    p1 = param[0]\r\n",
+    "    p2 = param[1]\r\n",
+    "    p3 = param[2]\r\n",
+    "    print(p1,p2,p3)\r\n",
+    "    # for value in key:\r\n",
+    "    #     print(value)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 16384, 'aaaaaaaa']\n",
+      "<class 'int'> 16384 <class 'str'>\n",
+      "[16384, 16384, '00000000']\n",
+      "<class 'int'> 16384 <class 'str'>\n",
+      "[32768, 16384, 'ffffffff']\n",
+      "<class 'int'> 16384 <class 'str'>\n",
+      "[49152, 16384, 'f0f0f0f0']\n",
+      "<class 'int'> 16384 <class 'str'>\n",
+      "[65536, 16384, 'ff00ff00']\n",
+      "<class 'int'> 16384 <class 'str'>\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "def time_unit_conversion(elapsed_time):\r\n",
+    "    t_wait = float(elapsed_time.split(' ')[0])\r\n",
+    "    if t_wait < 1e3:\r\n",
+    "        wait_time = f'{t_wait} us'\r\n",
+    "    elif t_wait >= 1e3 and t_wait < 1e6:\r\n",
+    "        wait_time = f'{t_wait/1e3:.3f} ms'\r\n",
+    "    else:\r\n",
+    "        wait_time = f'{t_wait/1e6:.3f} sec'\r\n",
+    "    return wait_time"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "source": [
+    "time_unit_conversion('12345678 us')"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'12.346 sec'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
