updated gui, underlying libs: dubrovnik, boardcom

--- a/Release/V1.0/Dubrovnik/dubScripts/dubrovnik_connection_template.ipynb
+++ b/Release/V1.0/Dubrovnik/dubScripts/dubrovnik_connection_template.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "source": [
     "import os\r\n",
     "import sys\r\n",
@@ -56,31 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "source": [
-    "# du.read(comm, 0, 0x400, echo=1, dispmode='w')\r\n",
-    "du.get_part_number(comm)\r\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'AT25SF041B'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 14
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "source": [
     "comm.send('b 0 80; wait 0')\r\n",
-    "comm.response(removeCmd=True, removePrompt=True, returnAsList=False)\r\n",
     "# comm.send('dvar wait_time')\r\n"
    ],
    "outputs": [
@@ -88,31 +66,51 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "15"
+       "0"
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 43
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "source": [
-    "twait = du.block_erase(comm, block_size='chip')\r\n",
-    "print(twait)\r\n",
-    "print(du.time_conv_from_usec(twait))\r\n"
+    "comm.response(longResponse=True)\r\n"
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "455\n",
-      "455 us\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'b 0 80; wait 0\\n00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \\n00 00 00 00 00 00 00 00 72 69 76 65 6e 20 62 79 20 52 61 6e 64 79 20 50 6f 62 73 74 2c 20 63 6c \\n6f 63 6b 65 64 20 31 3a 32 38 2e 32 31 33 21 0a 55 6e 70 6c 75 67 67 65 64 20 50 65 72 66 6f 72 \\n6d 61 6e 63 65 20 61 6e 6e 6f 75 6e 63 65 64 20 74 68 61 74 20 69 74 73 20 72 61 63 65 2d 6d 6f \\n>>>'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "source": [
+    "comm.response(longResponse=False)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \\n00 00 00 00 00 00 00 00 72 69 76 65 6e 20 62 79 20 52 61 6e 64 79 20 50 6f 62 73 74 2c 20 63 6c \\n6f 63 6b 65 64 20 31 3a 32 38 2e 32 31 33 21 0a 55 6e 70 6c 75 67 67 65 64 20 50 65 72 66 6f 72 \\n6d 61 6e 63 65 20 61 6e 6e 6f 75 6e 63 65 64 20 74 68 61 74 20 69 74 73 20 72 61 63 65 2d 6d 6f'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 49
     }
    ],
    "metadata": {}
