Icc_read_meas update

--- a/Release/V1.0/Dubrovnik/dubScripts/sandbox.ipynb
+++ b/Release/V1.0/Dubrovnik/dubScripts/sandbox.ipynb
@@ -530,6 +530,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "source": [
+    "for i in dir():\r\n",
+    "    print(i)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "In\n",
+      "Out\n",
+      "_\n",
+      "__\n",
+      "___\n",
+      "__builtin__\n",
+      "__builtins__\n",
+      "__doc__\n",
+      "__loader__\n",
+      "__name__\n",
+      "__package__\n",
+      "__spec__\n",
+      "_dh\n",
+      "_i\n",
+      "_i1\n",
+      "_ih\n",
+      "_ii\n",
+      "_iii\n",
+      "_oh\n",
+      "exit\n",
+      "get_ipython\n",
+      "os\n",
+      "quit\n",
+      "sys\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "var = 'Chip'\r\n",
+    "var.isstring()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
