--- a/Release/V1.0/Dubrovnik/dubScripts/dubrovnik_connection_template.ipynb
+++ b/Release/V1.0/Dubrovnik/dubScripts/dubrovnik_connection_template.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "source": [
     "import os\r\n",
     "import sys\r\n",
@@ -56,9 +56,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
+   "source": [
+    "# du.read(comm, 0, 0x400, echo=1, dispmode='w')\r\n",
+    "du.get_part_number(comm)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'AT25SF041B'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "source": [
     "comm.send('b 0 80; wait 0')\r\n",
+    "comm.response(removeCmd=True, removePrompt=True, returnAsList=False)\r\n",
     "# comm.send('dvar wait_time')\r\n"
    ],
    "outputs": [
@@ -66,74 +88,54 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0"
+       "'00 00 60 00 01 00 42 00 00 00 50 40 02 00 6e 42 04 00 6e 42 05 00 72 00 02 00 60 42 03 00 48 40 \\n08 00 64 40 08 00 20 40 02 00 76 40 0a 00 62 48 00 00 60 4a 04 00 20 40 0e 00 72 40 0c 00 62 48 \\n00 00 6a 40 00 00 30 0a 12 00 2e 02 11 00 20 0a 14 00 70 48 15 00 66 40 04 00 50 40 12 00 6e 42 \\n08 00 6e 42 01 00 60 4a 0a 00 74 4a 03 00 64 00 14 00 60 40 00 00 74 42 00 00 60 42 05 00 6c 4a '"
       ]
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 22
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "source": [
-    "comm.response(longResponse=True)\r\n"
+    "twait = du.block_erase(comm, block_size='chip')\r\n",
+    "print(twait)\r\n",
+    "print(du.time_conv_from_usec(twait))\r\n"
    ],
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'b 0 80; wait 0\\n00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \\n00 00 00 00 00 00 00 00 72 69 76 65 6e 20 62 79 20 52 61 6e 64 79 20 50 6f 62 73 74 2c 20 63 6c \\n6f 63 6b 65 64 20 31 3a 32 38 2e 32 31 33 21 0a 55 6e 70 6c 75 67 67 65 64 20 50 65 72 66 6f 72 \\n6d 61 6e 63 65 20 61 6e 6e 6f 75 6e 63 65 64 20 74 68 61 74 20 69 74 73 20 72 61 63 65 2d 6d 6f \\n>>>'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 48
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Chip Erase in progress...\n",
+      "Done.\n",
+      "0\n",
+      "0 us\n"
+     ]
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 32,
    "source": [
-    "comm.response(longResponse=False)\r\n"
+    "du.page_program(comm)\r\n",
+    "du.textToDisplay\r\n"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \\n00 00 00 00 00 00 00 00 72 69 76 65 6e 20 62 79 20 52 61 6e 64 79 20 50 6f 62 73 74 2c 20 63 6c \\n6f 63 6b 65 64 20 31 3a 32 38 2e 32 31 33 21 0a 55 6e 70 6c 75 67 67 65 64 20 50 65 72 66 6f 72 \\n6d 61 6e 63 65 20 61 6e 6e 6f 75 6e 63 65 64 20 74 68 61 74 20 69 74 73 20 72 61 63 65 2d 6d 6f'"
+       "'abc'"
       ]
      },
      "metadata": {},
-     "execution_count": 49
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "source": [
-    "comm.resp()\r\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00',\n",
-       " '00 00 00 00 00 00 00 00 72 69 76 65 6e 20 62 79 20 52 61 6e 64 79 20 50 6f 62 73 74 2c 20 63 6c',\n",
-       " '6f 63 6b 65 64 20 31 3a 32 38 2e 32 31 33 21 0a 55 6e 70 6c 75 67 67 65 64 20 50 65 72 66 6f 72',\n",
-       " '6d 61 6e 63 65 20 61 6e 6e 6f 75 6e 63 65 64 20 74 68 61 74 20 69 74 73 20 72 61 63 65 2d 6d 6f']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 46
+     "execution_count": 32
     }
    ],
    "metadata": {}
@@ -165,10 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "source": [
-    "del comm\r\n",
-    "del du"
-   ],
+   "source": [],
    "outputs": [],
    "metadata": {}
   },
@@ -299,11 +298,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "source": [
     "# ***********************************\r\n",
     "# ***** Disconnect, Delete Port *****\r\n",
     "# ***********************************\r\n",
+    "del comm\r\n",
+    "del du\r\n",
     "comm.disconnect(connectedPort, echo=1)\r\n"
    ],
    "outputs": [
