--- a/dubScripts/dubrovnik_connection_template.ipynb
+++ b/dubScripts/dubrovnik_connection_template.ipynb
@@ -26,13 +26,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "source": [
     "import os\r\n",
     "import sys\r\n",
     "import time\r\n",
     "from dubLibs import boardcom\r\n",
-    "from dubLibs import dubrovnik as du\r\n",
+    "from dubLibs import dubrovnik\r\n",
     "\r\n",
     "# os.system('cls')  # clear terminal screen\r\n",
     "# print(sys.path)\r\n",
@@ -40,7 +40,8 @@
     "# print(os.getcwd())\r\n",
     "\r\n",
     "comm = boardcom.BoardComm()   # create an instance of class BoardComm\r\n",
-    "connectedPort = comm.find_and_connect(echo=1)"
+    "connectedPort = comm.find_and_connect(echo=1)\r\n",
+    "du = dubrovnik.Dubrovnik()"
    ],
    "outputs": [
     {
@@ -56,31 +57,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "source": [
-    "# du.read(comm, 0, 0x400, echo=1, dispmode='w')\r\n",
-    "du.get_part_number(comm)\r\n"
+    "# du.read(comm, 0, 0x400, echo=1, dispmode=\r\n"
    ],
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'AT25SF041B'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 21
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'dubLibs.dubrovnik.Dubrovnik'>\n"
+     ]
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "source": [
     "comm.send('b 0 80; wait 0')\r\n",
-    "comm.response(removeCmd=True, removePrompt=True, returnAsList=False)\r\n",
+    "comm.response(removeCmd=False, removePrompt=False, returnAsList=True)\r\n",
     "# comm.send('dvar wait_time')\r\n"
    ],
    "outputs": [
@@ -88,11 +85,56 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'00 00 60 00 01 00 42 00 00 00 50 40 02 00 6e 42 04 00 6e 42 05 00 72 00 02 00 60 42 03 00 48 40 \\n08 00 64 40 08 00 20 40 02 00 76 40 0a 00 62 48 00 00 60 4a 04 00 20 40 0e 00 72 40 0c 00 62 48 \\n00 00 6a 40 00 00 30 0a 12 00 2e 02 11 00 20 0a 14 00 70 48 15 00 66 40 04 00 50 40 12 00 6e 42 \\n08 00 6e 42 01 00 60 4a 0a 00 74 4a 03 00 64 00 14 00 60 40 00 00 74 42 00 00 60 42 05 00 6c 4a '"
+       "['b 0 80; wait 0',\n",
+       " 'ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ',\n",
+       " 'ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ',\n",
+       " 'ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ',\n",
+       " 'ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ',\n",
+       " '>>>']"
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 5
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "du.page_program(comm, start_addr=0, length=200)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "112"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
+    "comm.response(removeCmd=False, removePrompt=False, returnAsList=True)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['dvar wait_time', '112 us', '>>>']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
     }
    ],
    "metadata": {}
@@ -298,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "source": [
     "# ***********************************\r\n",
     "# ***** Disconnect, Delete Port *****\r\n",
@@ -309,11 +351,14 @@
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n",
-      "Disconnected from COM7...\n"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'comm' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23724/450119215.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mcomm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mdu\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mcomm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisconnect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconnectedPort\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mecho\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'comm' is not defined"
      ]
     }
    ],
