Added dpm_gui_main.py for DPM Created dub_gui_main_1v0 and _2v0 for improving dub gui

--- a/dubScripts/dubrovnik_connection_template.ipynb
+++ b/dubScripts/dubrovnik_connection_template.ipynb
@@ -1,88 +1,59 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.2"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.2 64-bit"
-  },
-  "interpreter": {
-   "hash": "51ca2baa0497ed4a60fac6ed525d3f8063d91dfd8e083f58be1f47d06b6e7edc"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "import os\r\n",
-    "import sys\r\n",
-    "import time\r\n",
-    "from dubLibs import boardcom\r\n",
-    "from dubLibs import dubrovnik\r\n",
-    "\r\n",
-    "# os.system('cls')  # clear terminal screen\r\n",
-    "# print(sys.path)\r\n",
-    "os.chdir(r'c:\\MyLibs\\Dubrovnik\\dubScripts')\r\n",
-    "# print(os.getcwd())\r\n",
-    "\r\n",
-    "comm = boardcom.BoardComm()   # create an instance of class BoardComm\r\n",
-    "connectedPort = comm.find_and_connect(echo=1)\r\n",
-    "du = dubrovnik.Dubrovnik()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "['COM7']\n",
       "Connected to COM7...\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import time\n",
+    "from dubLibs import boardcom\n",
+    "from dubLibs import dubrovnik\n",
+    "\n",
+    "# os.system('cls')  # clear terminal screen\n",
+    "# print(sys.path)\n",
+    "os.chdir(r'c:\\MyLibs\\Dubrovnik\\dubScripts')\n",
+    "# print(os.getcwd())\n",
+    "\n",
+    "comm = boardcom.BoardComm()   # create an instance of class BoardComm\n",
+    "connectedPort = comm.find_and_connect(echo=1)\n",
+    "du = dubrovnik.Dubrovnik()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "# du.read(comm, 0, 0x400, echo=1, dispmode=\r\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "<class 'dubLibs.dubrovnik.Dubrovnik'>\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# du.read(comm, 0, 0x400, echo=1, dispmode=\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "source": [
-    "comm.send('b 0 80; wait 0')\r\n",
-    "comm.response(removeCmd=False, removePrompt=False, returnAsList=True)\r\n",
-    "# comm.send('dvar wait_time')\r\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['b 0 80; wait 0',\n",
@@ -93,64 +64,65 @@
        " '>>>']"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "comm.send('b 0 80; wait 0')\n",
+    "comm.response(removeCmd=False, removePrompt=False, returnAsList=True)\n",
+    "# comm.send('dvar wait_time')\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "source": [
-    "du.page_program(comm, start_addr=0, length=200)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "112"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "execution_count": 8
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "du.page_program(comm, start_addr=0, length=200)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "source": [
-    "comm.response(removeCmd=False, removePrompt=False, returnAsList=True)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['dvar wait_time', '112 us', '>>>']"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "comm.response(removeCmd=False, removePrompt=False, returnAsList=True)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "source": [
-    "twait = du.block_erase(comm, block_size='chip')\r\n",
-    "print(twait)\r\n",
-    "print(du.time_conv_from_usec(twait))\r\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Chip Erase in progress...\n",
       "Done.\n",
@@ -159,38 +131,39 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "twait = du.block_erase(comm, block_size='chip')\n",
+    "print(twait)\n",
+    "print(du.time_conv_from_usec(twait))\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "source": [
-    "du.page_program(comm)\r\n",
-    "du.textToDisplay\r\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'abc'"
       ]
      },
+     "execution_count": 32,
      "metadata": {},
-     "execution_count": 32
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "du.page_program(comm)\n",
+    "du.textToDisplay\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "source": [
-    "comm.responselines()\r\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['b 0 80; wait 0',\n",
@@ -200,49 +173,48 @@
        " '6d 61 6e 63 65 20 61 6e 6e 6f 75 6e 63 65 64 20 74 68 61 74 20 69 74 73 20 72 61 63 65 2d 6d 6f']"
       ]
      },
+     "execution_count": 47,
      "metadata": {},
-     "execution_count": 47
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "comm.responselines()\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "source": [
-    "comm.responselines()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['dvar wait_time', '110 us']"
       ]
      },
+     "execution_count": 40,
      "metadata": {},
-     "execution_count": 40
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "comm.responselines()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "# du.get_part_number(comm)\r\n",
-    "du.get_config(comm)\r\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'Part#': 'AT25SF641',\n",
@@ -259,47 +231,48 @@
        " 'min meas time (us)': '9344'}"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "# du.get_part_number(comm)\n",
+    "du.get_config(comm)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "source": [
-    "# du.get_part_number(comm)\r\n",
-    "cfg = du.get_config(comm)\r\n",
-    "cfg['Part#']\r\n",
-    "cfg['Voltage']\r\n",
-    "cfg['Frequency']"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'3.153'"
       ]
      },
+     "execution_count": 23,
      "metadata": {},
-     "execution_count": 23
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "# du.get_part_number(comm)\n",
+    "cfg = du.get_config(comm)\n",
+    "cfg['Part#']\n",
+    "cfg['Voltage']\n",
+    "cfg['Frequency']"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "source": [
-    "du.block_erase(comm, block_size=4, start_addr=0, echo=1)\r\n",
-    "du.read(comm, opcode='b', staddr=0, length=200, echo=1)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "06; d8 0; wait 0\n",
       ">>>\n",
@@ -315,45 +288,41 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "du.block_erase(comm, block_size=4, start_addr=0, echo=1)\n",
+    "du.read(comm, opcode='b', staddr=0, length=200, echo=1)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "source": [
-    "opcode = 'b'\r\n",
-    "staddr = 4000\r\n",
-    "nbyte = 0x100\r\n",
-    "cmdstr = f'{opcode} {staddr:x} {nbyte:x}'\r\n",
-    "print(cmdstr)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "b fa0 100\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "opcode = 'b'\n",
+    "staddr = 4000\n",
+    "nbyte = 0x100\n",
+    "cmdstr = f'{opcode} {staddr:x} {nbyte:x}'\n",
+    "print(cmdstr)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "source": [
-    "# ***********************************\r\n",
-    "# ***** Disconnect, Delete Port *****\r\n",
-    "# ***********************************\r\n",
-    "del comm\r\n",
-    "del du\r\n",
-    "comm.disconnect(connectedPort, echo=1)\r\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "NameError",
      "evalue": "name 'comm' is not defined",
+     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -362,37 +331,71 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# ***********************************\n",
+    "# ***** Disconnect, Delete Port *****\n",
+    "# ***********************************\n",
+    "del comm\n",
+    "del du\n",
+    "comm.disconnect(connectedPort, echo=1)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "source": [
-    "def func(x):\r\n",
-    "    if x:\r\n",
-    "        return [5, 'hi', (1,2,3)]\r\n",
-    "    else:\r\n",
-    "        return 'Hello'\r\n",
-    "\r\n",
-    "print(func(True))"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[5, 'hi', (1, 2, 3)]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "def func(x):\n",
+    "    if x:\n",
+    "        return [5, 'hi', (1,2,3)]\n",
+    "    else:\n",
+    "        return 'Hello'\n",
+    "\n",
+    "print(func(True))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.2 (tags/v3.9.2:1a79785, Feb 19 2021, 13:44:55) [MSC v.1928 64 bit (AMD64)]"
+  },
+  "orig_nbformat": 2,
+  "vscode": {
+   "interpreter": {
+    "hash": "73cef9b1c047c8956d95a1622f1a6ceeb8f33b45a13e3b4514321d37e7a75697"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
